Remove call to simple_format
With Trix, this is already HTML.

--- a/app/views/bongo/articles/show.html.erb
+++ b/app/views/bongo/articles/show.html.erb
@@ -3,7 +3,9 @@
     <h2><%= @article.title %></h2>
     <small><%= @article.publish_at ? l(@article.publish_at, format: :long) : "Unpublished draft"%></small>
   </header>
-  <main><%= simple_format @article.text %></main>
+  <main class="trix-content">
+    <%= @article.text.html_safe %>
+  </main>
 </article>
 
 <br>
