--- a/app/views/bongo/articles/index.html.erb
+++ b/app/views/bongo/articles/index.html.erb
@@ -2,7 +2,9 @@
   <article>
     <h2><%= link_to article.title, article %></h2>
     <small><%= article.publish_at ? l(article.publish_at, format: :long) : "Unpublished draft"%></small>
-    <p><%= simple_format article.text %></p>
+    <main class="trix-content">
+      <%= article.text.html_safe %>
+    </main>
   </article>
   <br>
 <% end %>
