Use trix-content styles to render articles

--- a/app/views/bongo/articles/index.html.erb
+++ b/app/views/bongo/articles/index.html.erb
@@ -1,10 +1,12 @@
 <% @articles.each do |article| %>
   <article>
-    <h2><%= link_to article.title, article %></h2>
-    <small><%= article.publish_at ? l(article.publish_at, format: :long) : "Unpublished draft"%></small>
-    <main class="trix-content">
+    <header>
+      <h2><%= link_to article.title, article %></h2>
+      <small><%= article.publish_at ? l(article.publish_at, format: :long) : "Unpublished draft"%></small>
+    </header>
+    <div class="trix-content">
       <%= article.text.html_safe %>
-    </main>
+    </div>
   </article>
   <br>
 <% end %>
