Authorize with pundit

--- a/app/views/bongo/articles/index.html.erb
+++ b/app/views/bongo/articles/index.html.erb
@@ -13,6 +13,8 @@
 
 <br>
 
-<%= link_to new_article_path do %>
-  <b>New Article</b>
+<% if policy(Bongo::Article).create? %>
+  <%= link_to new_article_path do %>
+    <b>New Article</b>
+  <% end %>
 <% end %>
