--- a/app/views/bongo/articles/_form.html.erb
+++ b/app/views/bongo/articles/_form.html.erb
@@ -24,6 +24,6 @@
   <button type="submit">Save</button>
 
   <%= link_to articles_path do %>
-    <em>Back</em>
+    <em>Cancel</em>
   <% end %>
 <% end %>
