--- a/app/views/layouts/bongo/application.html.erb
+++ b/app/views/layouts/bongo/application.html.erb
@@ -2,4 +2,8 @@
   Blog
 <% end %>
 
+<% content_for :head do %>
+  <%= auto_discovery_link_tag :rss, articles_url(format: :rss) %>
+<% end %>
+
 <%= render template: "layouts/application" %>
